完善代码逻辑，实现了简单的大陆障碍控制。

--- a/AdvantureIsland/AdvantureIsland.vcxproj.filters
+++ b/AdvantureIsland/AdvantureIsland.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="GlobalParameter.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="CommonStructure.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="land.cpp">
@@ -36,6 +39,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="GlobalParameter.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="CommonStructure.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
