--- a/AdvantureIsland/AdvantureIsland.vcxproj
+++ b/AdvantureIsland/AdvantureIsland.vcxproj
@@ -115,11 +115,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="CommonStructure.h" />
     <ClInclude Include="GlobalParameter.h" />
     <ClInclude Include="land.h" />
     <ClInclude Include="player.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="CommonStructure.cpp" />
     <ClCompile Include="GlobalParameter.cpp" />
     <ClCompile Include="land.cpp" />
     <ClCompile Include="main.cpp" />
