加入item在岛上的放置，完善界面的显示

--- a/AdvantureIsland/AdvantureIsland.vcxproj
+++ b/AdvantureIsland/AdvantureIsland.vcxproj
@@ -118,14 +118,22 @@
     <ClInclude Include="CommonStructure.h" />
     <ClInclude Include="GlobalParameter.h" />
     <ClInclude Include="land.h" />
+    <ClInclude Include="PickupBase.h" />
     <ClInclude Include="player.h" />
+    <ClInclude Include="Seed.h" />
+    <ClInclude Include="Stone.h" />
+    <ClInclude Include="Tree.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CommonStructure.cpp" />
     <ClCompile Include="GlobalParameter.cpp" />
     <ClCompile Include="land.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="PickupBase.cpp" />
     <ClCompile Include="player.cpp" />
+    <ClCompile Include="Seed.cpp" />
+    <ClCompile Include="Stone.cpp" />
+    <ClCompile Include="Tree.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
