改善输出信息管理，添加功能部件和放置模块

--- a/AdvantureIsland/AdvantureIsland.vcxproj
+++ b/AdvantureIsland/AdvantureIsland.vcxproj
@@ -116,9 +116,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="CommonStructure.h" />
+    <ClInclude Include="Constructer.h" />
+    <ClInclude Include="Cooker.h" />
+    <ClInclude Include="Gardener.h" />
     <ClInclude Include="GlobalParameter.h" />
+    <ClInclude Include="InteractiveBase.h" />
     <ClInclude Include="land.h" />
     <ClInclude Include="PickupBase.h" />
+    <ClInclude Include="Placer.h" />
     <ClInclude Include="player.h" />
     <ClInclude Include="Seed.h" />
     <ClInclude Include="Stone.h" />
@@ -126,10 +131,15 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CommonStructure.cpp" />
+    <ClCompile Include="Constructer.cpp" />
+    <ClCompile Include="Cooker.cpp" />
+    <ClCompile Include="Gardener.cpp" />
     <ClCompile Include="GlobalParameter.cpp" />
+    <ClCompile Include="InteractiveBase.cpp" />
     <ClCompile Include="land.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="PickupBase.cpp" />
+    <ClCompile Include="Placer.cpp" />
     <ClCompile Include="player.cpp" />
     <ClCompile Include="Seed.cpp" />
     <ClCompile Include="Stone.cpp" />
