--- a/AdvantureIsland/AdvantureIsland.vcxproj.filters
+++ b/AdvantureIsland/AdvantureIsland.vcxproj.filters
@@ -25,6 +25,18 @@
     <Filter Include="源文件\Interactive">
       <UniqueIdentifier>{b8e1d1e4-1882-4984-87a2-1ffc1d79ceeb}</UniqueIdentifier>
     </Filter>
+    <Filter Include="头文件\Place">
+      <UniqueIdentifier>{8b61ae66-7d4c-4352-aaa6-7b42c42d53d1}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="源文件\Place">
+      <UniqueIdentifier>{bcf97115-6936-44be-a34a-52a5c5eb0aa2}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="头文件\Animals">
+      <UniqueIdentifier>{f8f50a24-d7e4-4006-853c-908bcd83c781}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="源文件\Animals">
+      <UniqueIdentifier>{aa38d776-0d67-4494-9667-71b26e4282ef}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="land.h">
@@ -65,6 +77,30 @@
     </ClInclude>
     <ClInclude Include="Placer.h">
       <Filter>头文件\Interactive</Filter>
+    </ClInclude>
+    <ClInclude Include="PlaceBase.h">
+      <Filter>头文件\Place</Filter>
+    </ClInclude>
+    <ClInclude Include="Trap.h">
+      <Filter>头文件\Place</Filter>
+    </ClInclude>
+    <ClInclude Include="Wall.h">
+      <Filter>头文件\Place</Filter>
+    </ClInclude>
+    <ClInclude Include="Bed.h">
+      <Filter>头文件\Place</Filter>
+    </ClInclude>
+    <ClInclude Include="Chair.h">
+      <Filter>头文件\Place</Filter>
+    </ClInclude>
+    <ClInclude Include="FireTower.h">
+      <Filter>头文件\Place</Filter>
+    </ClInclude>
+    <ClInclude Include="AnimalBase.h">
+      <Filter>头文件\Animals</Filter>
+    </ClInclude>
+    <ClInclude Include="Deer.h">
+      <Filter>头文件\Animals</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -109,6 +145,30 @@
     </ClCompile>
     <ClCompile Include="Placer.cpp">
       <Filter>源文件\Interactive</Filter>
+    </ClCompile>
+    <ClCompile Include="PlaceBase.cpp">
+      <Filter>源文件\Place</Filter>
+    </ClCompile>
+    <ClCompile Include="Trap.cpp">
+      <Filter>源文件\Place</Filter>
+    </ClCompile>
+    <ClCompile Include="Wall.cpp">
+      <Filter>源文件\Place</Filter>
+    </ClCompile>
+    <ClCompile Include="Bed.cpp">
+      <Filter>源文件\Place</Filter>
+    </ClCompile>
+    <ClCompile Include="Chair.cpp">
+      <Filter>源文件\Place</Filter>
+    </ClCompile>
+    <ClCompile Include="FireTower.cpp">
+      <Filter>源文件\Place</Filter>
+    </ClCompile>
+    <ClCompile Include="AnimalBase.cpp">
+      <Filter>源文件\Animals</Filter>
+    </ClCompile>
+    <ClCompile Include="Deer.cpp">
+      <Filter>源文件\Animals</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
